Added Makefile and commands

--- a/report_server/docker-compose.yml
+++ b/report_server/docker-compose.yml
@@ -1,8 +1,8 @@
 services:
   
   evidently-ui:
-    environment:
-      - .dev.env
+    env_file:
+      - ../.dev.env
     build:
       context: .
     image: evidently-monitoring-ui
