--- a/machine_learning/pipelines/batch_inference/metadata.yaml
+++ b/machine_learning/pipelines/batch_inference/metadata.yaml
@@ -110,7 +110,7 @@ concurrency_config: {}
 conditionals: []
 created_at: '2024-07-15 15:18:56.037454+00:00'
 data_integration: null
-description: null
+description: Run a batch inference process using S3 as storage source and destination
 executor_config: {}
 executor_count: 1
 executor_type: null
