--- a/machine_learning/pipelines/prepare_data/metadata.yaml
+++ b/machine_learning/pipelines/prepare_data/metadata.yaml
@@ -11,12 +11,12 @@ blocks:
   language: python
   name: load_gaming_data
   retry_config: null
-  status: failed
+  status: executed
   timeout: null
   type: data_loader
   upstream_blocks: []
   uuid: load_gaming_data
-- all_upstream_blocks_executed: true
+- all_upstream_blocks_executed: false
   color: null
   configuration: {}
   downstream_blocks:
@@ -33,7 +33,7 @@ blocks:
   upstream_blocks:
   - load_gaming_data
   uuid: extract_player_features
-- all_upstream_blocks_executed: true
+- all_upstream_blocks_executed: false
   color: null
   configuration: {}
   downstream_blocks: []
@@ -49,7 +49,7 @@ blocks:
   upstream_blocks:
   - extract_player_features
   uuid: save_player_features
-- all_upstream_blocks_executed: true
+- all_upstream_blocks_executed: false
   color: null
   configuration: {}
   downstream_blocks:
@@ -66,7 +66,7 @@ blocks:
   upstream_blocks:
   - load_gaming_data
   uuid: format_column
-- all_upstream_blocks_executed: true
+- all_upstream_blocks_executed: false
   color: null
   configuration: {}
   downstream_blocks: []
