--- a/.gitignore
+++ b/.gitignore
@@ -131,6 +131,7 @@ env.bak/
 venv.bak/
 .dev.env
 .setdev.env
+.env-dev
 
 # Spyder project settings
 .spyderproject
@@ -178,3 +179,6 @@ terraform.tfstate
 terraform.tfstate.backup
 titanic_clean.csv
 cryptonews.csv
+
+#AWS Cli installation
+aws/
