--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
+numpy==1.26.4
 pandas==2.1.0
-scikit-learn
-boto3== 1.34.156
+scikit-learn==1.5.1
+boto3== 1.34.157
 s3fs
 mlflow==2.14.0
 evidently==0.4.4
 pytest==8.3.2
+pylint==3.2.6
+black==24.8.0
+isort==5.13.2
