Updated env file

--- a/.env.bck
+++ b/.env.bck
@@ -4,43 +4,45 @@ AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=
 AWS_REGION=
-AWS_BUCKET_NAME=mlops-zoomcamp-gaming-1
+
+AWS_BUCKET_NAME=mlops-gaming-prod
 
 # Terraform Variables
 TF_VAR_AWS_ACCESS_KEY_ID=
 TF_VAR_AWS_SECRET_ACCESS_KEY=
 TF_VAR_AWS_DEFAULT_REGION=
 TF_VAR_AWS_REGION=
-TF_VAR_AWS_BUCKET_NAME=mlops-zoomcamp-gaming-1
+
+TF_VAR_AWS_BUCKET_NAME=mlops-gaming-prod
 
 
 # Project settings
 # If you start the project with ./start.sh, the project name and code path will already be set.
 PROJECT_NAME=machine_learning
-MAGE_CODE_PATH=/home/src
+MAGE_CODE_PATH=/home/mage_code
 # Load custom files
 PYTHONPATH="${MAGE_CODE_PATH}/${PROJECT_NAME}:${PYTHONPATH}"
 
 # Mlflow params
 MLFLOW_PORT=5000
-MLFLOW_ENDPOINT_URL=http://mlflow:5000
+MLFLOW_ENDPOINT_URL=http://127.0.0.1:5000
 BACKEND_STORE_URI=sqlite:////mlflow/mlflow.db                          # slim
 MLFLOW_EXPERIMENT_NAME="online_gaming_1"
 
 # Artifact Store: ------------------------------------------------------------
 
 # LocalArtifactRepository:
-DEFAULT_ARTIFACT_ROOT=s3://${AWS_BUCKET_NAME}
-DEFAULT_ARTIFACTS_DESTINATION=s3://${AWS_BUCKET_NAME}
+DEFAULT_ARTIFACT_ROOT=s3://${AWS_BUCKET_NAME}/mlflow
+DEFAULT_ARTIFACTS_DESTINATION=s3://${AWS_BUCKET_NAME}/mlflow
 
 
 # Terraform Variables
 TF_VAR_PROJECT_NAME=machine_learning
-TF_VAR_MAGE_CODE_PATH=/home/src
+TF_VAR_MAGE_CODE_PATH=/home/mage_code
 TF_VAR_PYTHONPATH="${MAGE_CODE_PATH}/${PROJECT_NAME}:${PYTHONPATH}"
 TF_VAR_MLFLOW_PORT=5000
-TF_VAR_MLFLOW_ENDPOINT_URL=http://mlflow:5000
+TF_VAR_MLFLOW_ENDPOINT_URL=http://127.0.0.1:5000
 TF_VAR_BACKEND_STORE_URI=sqlite:////mlflow/mlflow.db                          # slim
 TF_VAR_MLFLOW_EXPERIMENT_NAME="online_gaming_1"
-TF_VAR_DEFAULT_ARTIFACT_ROOT=s3://${AWS_BUCKET_NAME}
-TF_VAR_DEFAULT_ARTIFACTS_DESTINATION=s3://${AWS_BUCKET_NAME}
+TF_VAR_DEFAULT_ARTIFACT_ROOT=s3://${AWS_BUCKET_NAME}/mlflow
+TF_VAR_DEFAULT_ARTIFACTS_DESTINATION=s3://${AWS_BUCKET_NAME}/mlflow
