--- a/.env.bck
+++ b/.env.bck
@@ -27,7 +27,7 @@ PYTHONPATH="${MAGE_CODE_PATH}/${PROJECT_NAME}:${PYTHONPATH}"
 MLFLOW_PORT=5000
 MLFLOW_ENDPOINT_URL=http://127.0.0.1:5000
 BACKEND_STORE_URI=sqlite:////mlflow/mlflow.db                          # slim
-MLFLOW_EXPERIMENT_NAME="online_gaming_1"
+MLFLOW_EXPERIMENT_NAME="online_gaming"
 
 # Artifact Store: ------------------------------------------------------------
 
@@ -43,6 +43,6 @@ TF_VAR_PYTHONPATH="${MAGE_CODE_PATH}/${PROJECT_NAME}:${PYTHONPATH}"
 TF_VAR_MLFLOW_PORT=5000
 TF_VAR_MLFLOW_ENDPOINT_URL=http://127.0.0.1:5000
 TF_VAR_BACKEND_STORE_URI=sqlite:////mlflow/mlflow.db                          # slim
-TF_VAR_MLFLOW_EXPERIMENT_NAME="online_gaming_1"
+TF_VAR_MLFLOW_EXPERIMENT_NAME="online_gaming"
 TF_VAR_DEFAULT_ARTIFACT_ROOT=s3://${AWS_BUCKET_NAME}/mlflow
 TF_VAR_DEFAULT_ARTIFACTS_DESTINATION=s3://${AWS_BUCKET_NAME}/mlflow
