Added local IP to instructions

--- a/.env.bck
+++ b/.env.bck
@@ -12,6 +12,7 @@ TF_VAR_AWS_ACCESS_KEY_ID=
 TF_VAR_AWS_SECRET_ACCESS_KEY=
 TF_VAR_AWS_DEFAULT_REGION=
 TF_VAR_AWS_REGION=
+TF_VAR_MYLOCALIP=
 
 TF_VAR_AWS_BUCKET_NAME=mlops-gaming-prod
 
@@ -46,3 +47,4 @@ TF_VAR_BACKEND_STORE_URI=sqlite:////mlflow/mlflow.db                          # 
 TF_VAR_MLFLOW_EXPERIMENT_NAME="online_gaming"
 TF_VAR_DEFAULT_ARTIFACT_ROOT=s3://${AWS_BUCKET_NAME}/mlflow
 TF_VAR_DEFAULT_ARTIFACTS_DESTINATION=s3://${AWS_BUCKET_NAME}/mlflow
+TF_VAR_MYLOCALIP=
