Updated dockerfile mlflow copy db

--- a/mlflow/Dockerfile
+++ b/mlflow/Dockerfile
@@ -15,6 +15,7 @@ RUN apt-get update && apt-get install -y procps \
 #
 WORKDIR /mlflow/
 
+COPY mlflow.db .
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt \
     && rm requirements.txt
